Eh: properly update centos-7 packaging

--- a/packaging/centos-7/build-image/Dockerfile
+++ b/packaging/centos-7/build-image/Dockerfile
@@ -1,4 +1,6 @@
 FROM alanfranz/fwd-centos-7:latest
 MAINTAINER Alan Franzoni <username@franzoni.eu>
 # whatever is required for building should be installed in this image; just like BuildRequires: for RPM specs
-RUN yum -y install readline-devel
+RUN yum -y install epel-release rsync which 
+RUN yum -y install python34 python34-devel python34-setuptools
+RUN easy_install-3.4 "virtualenv==15.0.3"
