--- a/packaging/centos-7/build
+++ b/packaging/centos-7/build
@@ -31,7 +31,8 @@ ${TESTONLY} || rm -rf out
 # the env.list file is a good shortcut for sharing env variable that may be reused from various packages,
 # but you can choose to forward additional variables with the --env switch. It's quite common to forward
 # things like BUILD_NUMBER or GIT_COMMIT from a CI server to use them within the package.
-${TESTONLY} || docker run --env-file ../env.list --rm -v $(pwd)/build-inside:/build-inside:ro -v ${SRC_DIR}:/source:ro -v $(pwd)/out:/out \
+${TESTONLY} || docker run --env "BUILD_NUMBER=${BUILD_NUMBER:-0}" --env "GIT_COMMIT=${GIT_COMMIT:-asd}" \
+	--env-file ../env.list --rm -v $(pwd)/build-inside:/build-inside:ro -v ${SRC_DIR}:/source:ro -v $(pwd)/out:/out \
 	-v "${PRIVATE_KEY_FILE}":/tmp/private.key:ro \
 	-w /build-inside ${BUILD_IMAGE} /build-inside/build-package
 
